--- a/en/ignite-services/index.html
+++ b/en/ignite-services/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="../../css/stylesheet.css">
+    <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/shell.js"></script>
 
 
 
@@ -258,25 +259,40 @@
     <h4 class="arrow">NEWSLETTER</h4>
   </div>           
 
-  <!-- NEWSLETTER---> 
-  <section class="newsletter wrap">
-    <img class="newsletter-img" src="../../images/newsletter.svg" alt="newsletter illustration sign up" width="255px">
-
-     <div class="newsletter-content">
+<!-- NEWSLETTER---> 
+<section class="newsletter wrap">
+    <img class="newsletter-img" src="../images/newsletter.svg" alt="newsletter illustration sign up" width="255px">
+    <div class="newsletter-content">
         <h2>Sign up for our Newsletter</h2>
-       <h4>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Duis autem vel eum iriure dolor. </h4>
-      </div>  
-      <form class="newsletter">
-        <div class="form-group">
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="E-mail">
+       <h4>Recieve the latest news about our products, services and events</h4>
+    </div>  
+<form novalidate="" accept-charset="UTF-8" action="https://forms.hsforms.com/submissions/v3/public/submit/formsnext/multipart/4304957/b46283cb-637c-46a5-8b9c-4cb06bc46bd3" enctype="multipart/form-data" id="hsForm_b46283cb-637c-46a5-8b9c-4cb06bc46bd3"
+method="POST" class="newsletter hs-form stacked hs-form-private hs-form-b46283cb-637c-46a5-8b9c-4cb06bc46bd3_ab294c00-5f63-4e0c-a3a0-9c26a5604c85" data-form-id="b46283cb-637c-46a5-8b9c-4cb06bc46bd3" data-portal-id="4304957" target="target_iframe_b46283cb-637c-46a5-8b9c-4cb06bc46bd3"
+data-reactid=".hbspt-forms-4">
+    <div class="form-group hs_email hs-email hs-fieldtype-text field hs-form-field" data-reactid=".hbspt-forms-4.1:$0">
+        <label id="label-email-b46283cb-637c-46a5-8b9c-4cb06bc46bd3" class="" placeholder="" for="email-b46283cb-637c-46a5-8b9c-4cb06bc46bd3" data-reactid=".hbspt-forms-4.1:$0.0"><span data-reactid=".hbspt-forms-4.1:$0.0.0"></span><span class="hs-form-required" data-reactid=".hbspt-forms-4.1:$0.0.1">*</span>
+        </label>
+        <legend class="hs-field-desc" style="display:none;" data-reactid=".hbspt-forms-4.1:$0.1"></legend>
+        <div class="input" data-reactid=".hbspt-forms-4.1:$0.$email">
+            <input id="email-b46283cb-637c-46a5-8b9c-4cb06bc46bd3" class="hs-input form-control" type="email" name="email" required="" placeholder="E-post" value="" autocomplete="email" data-reactid=".hbspt-forms-4.1:$0.$email.0">
         </div>
-        <button type="submit" class="submit btn btn-primary">Sign me up</button>
-      </form>
-      <div class="social-media-icons">
-        <a href="https://www.facebook.com/igniteprocurement/" target="_blank"><img class="icon" src="../../images/icons/facebook.svg" alt="Follow us on facebook" width="40px"></a>
-        <a href="https://www.linkedin.com/company/ignite-procurement/" target="_blank"><img class="icon" src="../../images/icons/linkedin.svg" alt="Follow us on linkedin" width="40px"></a>
-      </div> 
-  </section>
+    </div>
+    <noscript data-reactid=".hbspt-forms-4.2"></noscript>
+    <div class="hs_submit hs-submit" data-reactid=".hbspt-forms-4.5">
+        <div class="hs-field-desc" style="display:none;" data-reactid=".hbspt-forms-4.5.0"></div>
+        <div class="actions" data-reactid=".hbspt-forms-4.5.1">
+            <input type="submit" value="Sign me up" class="hs-button submit btn btn-primary" data-reactid=".hbspt-forms-4.5.1.0">
+        </div>
+    </div>
+    <noscript data-reactid=".hbspt-forms-4.6"></noscript>
+
+    <iframe name="target_iframe_b46283cb-637c-46a5-8b9c-4cb06bc46bd3" style="display:none;" data-reactid=".hbspt-forms-4.8"></iframe>
+</form>
+<div class="social-media-icons">
+    <a href="https://www.facebook.com/igniteprocurement/" target="_blank"><img class="icon" src="../images/icons/facebook.svg" alt="Follow us on facebook" width="40px"></a>
+    <a href="https://www.linkedin.com/company/ignite-procurement/" target="_blank"><img class="icon" src="../images/icons/linkedin.svg" alt="Follow us on linkedin" width="40px"></a>
+  </div> 
+</section>
 
          <!-- FOOTER---> 
   
