update phone and images
update phone numbers
and images

--- a/en/about/index.html
+++ b/en/about/index.html
@@ -196,16 +196,16 @@
           <div class="main-contact-info">
             <h4 class="blue-bold">Rikard Bakkehaug</h4>
             <h4 class="title">Tech Lead​ Back End</h4>
-            <a class="phoneto" href="tel:"><i class="fas fa-phone"></i></a>
+            <a class="phoneto" href="tel:+47 416 94 078"><i class="fas fa-phone"></i>+47 416 94 078</a>
             <a class="mailto" href="mailto:rikard.bakkehaug@ignite.no"><i class="fas fa-envelope"></i></i>rikard.bakkehaug@ignite.no</a>
           </div>
         </div>
         <div class="main-contact d-inline-flex p-2 flex-column">
            <img class="contact" src="../../images/team/Lars_Ankil.jpg" alt="Partner" width="250px" height="250px">
            <div class="main-contact-info">
-             <h4 class="blue-bold">Lars Lien</h4>
+             <h4 class="blue-bold">Lars Lien Ankile</h4>
              <h4 class="title">Software Engineer</h4>
-             <a class="phoneto" href="tel:"><i class="fas fa-phone"></i></a>
+             <a class="phoneto" href="tel:+47 948 97 416"><i class="fas fa-phone"></i>+47 948 97 416</a>
              <a class="mailto" href="mailto:lars.lien@ignite.no"><i class="fas fa-envelope"></i></i>lars.lien@ignite.no</a>
            </div>
          </div>          
@@ -214,7 +214,7 @@
            <div class="main-contact-info">
              <h4 class="blue-bold">Henrik Høiness</h4>
              <h4 class="title">Software Engineer</h4>
-             <a class="phoneto" href=""><i class="fas fa-phone"></i></a>
+             <a class="phoneto" href="tel:+47 480 39 233"><i class="fas fa-phone"></i>+47 480 39 233</a>
              <a class="mailto" href="mailto:henrik.hoiness@ignite.no"><i class="fas fa-envelope"></i></i>henrik.hoiness@ignite.no</a>
            </div>
          </div>
@@ -223,7 +223,7 @@
             <div class="main-contact-info">
               <h4 class="blue-bold">Bendik Molland</h4>
               <h4 class="title">Business Development Consultant​</h4>
-              <a class="phoneto" href="tel:"><i class="fas fa-phone"></i></a>
+              <a class="phoneto" href="tel:+47 920 22 954"><i class="fas fa-phone"></i>+47 920 22 954</a>
               <a class="mailto" href="mailto:bendik.molland@ignite.no"><i class="fas fa-envelope"></i></i>bendik.molland@ignite.no</a>
             </div>
           </div>
@@ -232,7 +232,7 @@
              <div class="main-contact-info">
                <h4 class="blue-bold">Kristian Morthen​</h4>
                <h4 class="title">Business Development Manager​</h4>
-               <a class="phoneto" href=""><i class="fas fa-phone"></i></a>
+               <a class="phoneto" href="tel:+47 950 52 444"><i class="fas fa-phone"></i>+47 950 52 444</a>
                <a class="mailto" href="mailto:kristian.morthen@ignite.no"><i class="fas fa-envelope"></i></i>kristian.morthen@ignite.no</a>
              </div>
            </div>
@@ -241,7 +241,7 @@
              <div class="main-contact-info">
                <h4 class="blue-bold">Jon Riege</h4>
                <h4 class="title">Software Engineer</h4>
-               <a class="phoneto" href="tel:+47 482 68 862"><i class="fas fa-phone"></i>+47 482 68 862</a>
+               <a class="phoneto" href="tel:+47 482 688 62"><i class="fas fa-phone"></i>+47 482 68 862</a>
                <a class="mailto" href="mailto:jon.riege@ignite.no "><i class="fas fa-envelope"></i></i>jon.riege@ignite.no </a>
              </div>
            </div>
@@ -296,7 +296,7 @@
       
 <!-- NEWSLETTER---> 
 <section class="newsletter wrap">
-    <img class="newsletter-img" src="../images/newsletter.svg" alt="newsletter illustration sign up" width="255px">
+    <img class="newsletter-img" src="../../images/newsletter.svg" alt="newsletter illustration sign up" width="255px">
     <div class="newsletter-content">
         <h2>Sign up for our Newsletter</h2>
        <h4>Recieve the latest news about our products, services and events</h4>
