--- a/om-oss/index.html
+++ b/om-oss/index.html
@@ -152,120 +152,120 @@
 
         </div>         
 
- <!-- TEAM-BLOCK--->      
- <div class="heading-wrap wrap">
-    <h2 class="">Team</h2>
-</div>    
- <section class="team wrap d-flex p-2 flex-wrap justify-content-between">
-   <div class="main-contact d-inline-flex p-2 flex-column">
-      <img class="contact" src="../images/team/Sigbjørn_Nome.jpg" alt="Partner" width="250px" height="250px">
-      <div class="main-contact-info">
-        <h4 class="blue-bold">Sigbjørn Nome</h4>
-        <h4 class="title">CEO & Product Director​</h4>
-        <a class="phoneto" href="tel:+47 944 88 923"><i class="fas fa-phone"></i>+47 944 88 923</a>
-        <a class="mailto" href="mailto:sigbjorn.nome@ignite.no"><i class="fas fa-envelope"></i></i>sigbjorn.nome@ignite.no</a>
-      </div>
-    </div>
-    <div class="main-contact d-inline-flex p-2 flex-column">
-       <img class="contact" src="../images/team/Børge_Kvalheim_Langedal.jpg" alt="Partner" width="250px" height="250px">
-       <div class="main-contact-info">
-         <h4 class="blue-bold">Børge Langedal</h4>
-         <h4 class="title">Sales & Marketing Director​</h4>
-         <a class="phoneto" href="tel:+47 992 38 391"><i class="fas fa-phone"></i>+47 992 38 391</a>
-         <a class="mailto" href="mailto:borge.langedal@ignite.no"><i class="fas fa-envelope"></i></i>borge.langedal@ignite.no</a>
-       </div>
-     </div>
+   <!-- TEAM-BLOCK--->      
+   <div class="heading-wrap wrap">
+      <h2 class="">Team</h2>
+  </div>    
+   <section class="team wrap d-flex p-2 flex-wrap justify-content-between">
      <div class="main-contact d-inline-flex p-2 flex-column">
-        <img class="contact" src="../images/team/Valdemar_Rolfsen.jpg" alt="Partner" width="250px" height="250px">
+        <img class="contact" src="../../images/team/Sigbjørn_Nome.jpg" alt="Partner" width="250px" height="250px">
         <div class="main-contact-info">
-          <h4 class="blue-bold">Valdemar Rolfsen</h4>
-          <h4 class="title">Technology Director</h4>
-          <a class="phoneto" href="tel:+47 993 22 797"><i class="fas fa-phone"></i>+47 993 22 797</a>
-          <a class="mailto" href="mailto:valdemar.rolfsen@ignite.no"><i class="fas fa-envelope"></i></i>valdemar.rolfsen@ignite.no</a>
+          <h4 class="blue-bold">Sigbjørn Nome</h4>
+          <h4 class="title">CEO & Product Director​</h4>
+          <a class="phoneto" href="tel:+47 944 88 923"><i class="fas fa-phone"></i>+47 944 88 923</a>
+          <a class="mailto" href="mailto:sigbjorn.nome@ignite.no"><i class="fas fa-envelope"></i></i>sigbjorn.nome@ignite.no</a>
         </div>
       </div>
       <div class="main-contact d-inline-flex p-2 flex-column">
-         <img class="contact" src="../images/team/Frank_Willie_Bødal.jpg" alt="Partner" width="250px" height="250px">
+         <img class="contact" src="../../images/team/Børge_Kvalheim_Langedal.jpg" alt="Partner" width="250px" height="250px">
          <div class="main-contact-info">
-           <h4 class="blue-bold">Frank-Willie Bødal</h4>
-           <h4 class="title">Customer Success Director​</h4>
-           <a class="phoneto" href="tel:+47 952 60 850"><i class="fas fa-phone"></i>+47 952 60 850</a>
-           <a class="mailto" href="mailto:frank.bodal@ignite.no"><i class="fas fa-envelope"></i></i>frank.bodal@ignite.no</a>
+           <h4 class="blue-bold">Børge Langedal</h4>
+           <h4 class="title">Sales & Marketing Director​</h4>
+           <a class="phoneto" href="tel:+47 992 38 391"><i class="fas fa-phone"></i>+47 992 38 391</a>
+           <a class="mailto" href="mailto:borge.langedal@ignite.no"><i class="fas fa-envelope"></i></i>borge.langedal@ignite.no</a>
          </div>
        </div>
        <div class="main-contact d-inline-flex p-2 flex-column">
-          <img class="contact" src="../images/team/Rikard_Bakkehaug.jpg" alt="Partner" width="250px" height="250px">
+          <img class="contact" src="../../images/team/Valdemar_Rolfsen.jpg" alt="Partner" width="250px" height="250px">
           <div class="main-contact-info">
-            <h4 class="blue-bold">Rikard Bakkehaug</h4>
-            <h4 class="title">Tech Lead​ Back End</h4>
-            <a class="phoneto" href="tel:"><i class="fas fa-phone"></i></a>
-            <a class="mailto" href="mailto:rikard.bakkehaug@ignite.no"><i class="fas fa-envelope"></i></i>rikard.bakkehaug@ignite.no</a>
+            <h4 class="blue-bold">Valdemar Rolfsen</h4>
+            <h4 class="title">Technology Director</h4>
+            <a class="phoneto" href="tel:+47 993 22 797"><i class="fas fa-phone"></i>+47 993 22 797</a>
+            <a class="mailto" href="mailto:valdemar.rolfsen@ignite.no"><i class="fas fa-envelope"></i></i>valdemar.rolfsen@ignite.no</a>
           </div>
         </div>
         <div class="main-contact d-inline-flex p-2 flex-column">
-           <img class="contact" src="../images/team/Lars_Ankil.jpg" alt="Partner" width="250px" height="250px">
+           <img class="contact" src="../../images/team/Frank_Willie_Bødal.jpg" alt="Partner" width="250px" height="250px">
            <div class="main-contact-info">
-             <h4 class="blue-bold">Lars Lien</h4>
-             <h4 class="title">Software Engineer</h4>
-             <a class="phoneto" href="tel:"><i class="fas fa-phone"></i></a>
-             <a class="mailto" href="mailto:lars.lien@ignite.no"><i class="fas fa-envelope"></i></i>lars.lien@ignite.no</a>
-           </div>
-         </div>          
-        <div class="main-contact d-inline-flex p-2 flex-column">
-           <img class="contact" src="../images/team/Henrik_Høiness.jpg" alt="Partner" width="250px" height="250px">
-           <div class="main-contact-info">
-             <h4 class="blue-bold">Henrik Høiness</h4>
-             <h4 class="title">Software Engineer</h4>
-             <a class="phoneto" href=""><i class="fas fa-phone"></i></a>
-             <a class="mailto" href="mailto:henrik.hoiness@ignite.no"><i class="fas fa-envelope"></i></i>henrik.hoiness@ignite.no</a>
+             <h4 class="blue-bold">Frank-Willie Bødal</h4>
+             <h4 class="title">Customer Success Director​</h4>
+             <a class="phoneto" href="tel:+47 952 60 850"><i class="fas fa-phone"></i>+47 952 60 850</a>
+             <a class="mailto" href="mailto:frank.bodal@ignite.no"><i class="fas fa-envelope"></i></i>frank.bodal@ignite.no</a>
            </div>
          </div>
          <div class="main-contact d-inline-flex p-2 flex-column">
-            <img class="contact" src="../images/team/Bendik_Johnsen_Molland.jpg" alt="Partner" width="250px" height="250px">
+            <img class="contact" src="../../images/team/Rikard_Bakkehaug.jpg" alt="Partner" width="250px" height="250px">
             <div class="main-contact-info">
-              <h4 class="blue-bold">Bendik Molland</h4>
-              <h4 class="title">Business Development Consultant​</h4>
-              <a class="phoneto" href="tel:"><i class="fas fa-phone"></i></a>
-              <a class="mailto" href="mailto:bendik.molland@ignite.no"><i class="fas fa-envelope"></i></i>bendik.molland@ignite.no</a>
+              <h4 class="blue-bold">Rikard Bakkehaug</h4>
+              <h4 class="title">Tech Lead​ Back End</h4>
+              <a class="phoneto" href="tel:+47 416 94 078"><i class="fas fa-phone"></i>+47 416 94 078</a>
+              <a class="mailto" href="mailto:rikard.bakkehaug@ignite.no"><i class="fas fa-envelope"></i></i>rikard.bakkehaug@ignite.no</a>
             </div>
           </div>
           <div class="main-contact d-inline-flex p-2 flex-column">
-             <img class="contact" src="../images/team/Kristian _Morthen.jpg" alt="Partner" width="250px" height="250px">
+             <img class="contact" src="../../images/team/Lars_Ankil.jpg" alt="Partner" width="250px" height="250px">
              <div class="main-contact-info">
-               <h4 class="blue-bold">Kristian Morthen​</h4>
-               <h4 class="title">Business Development Manager​</h4>
-               <a class="phoneto" href=""><i class="fas fa-phone"></i></a>
-               <a class="mailto" href="mailto:kristian.morthen@ignite.no"><i class="fas fa-envelope"></i></i>kristian.morthen@ignite.no</a>
-             </div>
-           </div>
-          <div class="main-contact d-inline-flex p-2 flex-column">
-             <img class="contact" src="../images/team/Jon_Riege.jpg" alt="Partner" width="250px" height="250px">
-             <div class="main-contact-info">
-               <h4 class="blue-bold">Jon Riege</h4>
+               <h4 class="blue-bold">Lars Lien Ankile</h4>
                <h4 class="title">Software Engineer</h4>
-               <a class="phoneto" href="tel:+47 482 68 862"><i class="fas fa-phone"></i>+47 482 68 862</a>
-               <a class="mailto" href="mailto:jon.riege@ignite.no "><i class="fas fa-envelope"></i></i>jon.riege@ignite.no </a>
+               <a class="phoneto" href="tel:+47 948 97 416"><i class="fas fa-phone"></i>+47 948 97 416</a>
+               <a class="mailto" href="mailto:lars.lien@ignite.no"><i class="fas fa-envelope"></i></i>lars.lien@ignite.no</a>
+             </div>
+           </div>          
+          <div class="main-contact d-inline-flex p-2 flex-column">
+             <img class="contact" src="../../images/team/Henrik_Høiness.jpg" alt="Partner" width="250px" height="250px">
+             <div class="main-contact-info">
+               <h4 class="blue-bold">Henrik Høiness</h4>
+               <h4 class="title">Software Engineer</h4>
+               <a class="phoneto" href="tel:+47 480 39 233"><i class="fas fa-phone"></i>+47 480 39 233</a>
+               <a class="mailto" href="mailto:henrik.hoiness@ignite.no"><i class="fas fa-envelope"></i></i>henrik.hoiness@ignite.no</a>
              </div>
            </div>
            <div class="main-contact d-inline-flex p-2 flex-column">
-              <img class="contact" src="../images/team/Jørgen_Juel.jpg" alt="Partner" width="250px" height="250px">
+              <img class="contact" src="../../images/team/Bendik_Johnsen_Molland.jpg" alt="Partner" width="250px" height="250px">
               <div class="main-contact-info">
-                <h4 class="blue-bold">Jørgen Juel</h4>
-                <h4 class="title">Software Engineer</h4>
-                <a class="phoneto" href="tel:+47 975 06 012"><i class="fas fa-phone"></i>+47 975 06 012</a>
-                <a class="mailto" href="mailto:jorgen.juel@ignite.no "><i class="fas fa-envelope"></i></i>jorgen.juel@ignite.no </a>
+                <h4 class="blue-bold">Bendik Molland</h4>
+                <h4 class="title">Business Development Consultant​</h4>
+                <a class="phoneto" href="tel:+47 920 22 954"><i class="fas fa-phone"></i>+47 920 22 954</a>
+                <a class="mailto" href="mailto:bendik.molland@ignite.no"><i class="fas fa-envelope"></i></i>bendik.molland@ignite.no</a>
               </div>
             </div>
             <div class="main-contact d-inline-flex p-2 flex-column">
-               <img class="contact" src="../images/team/Hege_Obstfelder.jpg" alt="Partner" width="250px" height="250px">
+               <img class="contact" src="../../images/team/Kristian _Morthen.jpg" alt="Partner" width="250px" height="250px">
                <div class="main-contact-info">
-                 <h4 class="blue-bold">Hege Obstfelder​</h4>
-                 <h4 class="title">Chairman of the Board</h4>
-                 <a class="phoneto" href="tel:+47 959 98 283"><i class="fas fa-phone"></i>+47 959 98 283</a>
-                 <a class="mailto" href="mailto:hege.obstfelder@diplom-is.no "><i class="fas fa-envelope"></i></i>hege.obstfelder@diplom-is.no</a>
+                 <h4 class="blue-bold">Kristian Morthen​</h4>
+                 <h4 class="title">Business Development Manager​</h4>
+                 <a class="phoneto" href="tel:+47 950 52 444"><i class="fas fa-phone"></i>+47 950 52 444</a>
+                 <a class="mailto" href="mailto:kristian.morthen@ignite.no"><i class="fas fa-envelope"></i></i>kristian.morthen@ignite.no</a>
                </div>
-             </div>              
-         </section>
+             </div>
+            <div class="main-contact d-inline-flex p-2 flex-column">
+               <img class="contact" src="../../images/team/Jon_Riege.jpg" alt="Partner" width="250px" height="250px">
+               <div class="main-contact-info">
+                 <h4 class="blue-bold">Jon Riege</h4>
+                 <h4 class="title">Software Engineer</h4>
+                 <a class="phoneto" href="tel:+47 482 688 62"><i class="fas fa-phone"></i>+47 482 68 862</a>
+                 <a class="mailto" href="mailto:jon.riege@ignite.no "><i class="fas fa-envelope"></i></i>jon.riege@ignite.no </a>
+               </div>
+             </div>
+             <div class="main-contact d-inline-flex p-2 flex-column">
+                <img class="contact" src="../../images/team/Jørgen_Juel.jpg" alt="Partner" width="250px" height="250px">
+                <div class="main-contact-info">
+                  <h4 class="blue-bold">Jørgen Juel</h4>
+                  <h4 class="title">Software Engineer</h4>
+                  <a class="phoneto" href="tel:+47 975 06 012"><i class="fas fa-phone"></i>+47 975 06 012</a>
+                  <a class="mailto" href="mailto:jorgen.juel@ignite.no "><i class="fas fa-envelope"></i></i>jorgen.juel@ignite.no </a>
+                </div>
+              </div>
+              <div class="main-contact d-inline-flex p-2 flex-column">
+                 <img class="contact" src="../../images/team/Hege_Obstfelder.jpg" alt="Partner" width="250px" height="250px">
+                 <div class="main-contact-info">
+                   <h4 class="blue-bold">Hege Obstfelder​</h4>
+                   <h4 class="title">Chairman of the Board</h4>
+                   <a class="phoneto" href="tel:+47 959 98 283"><i class="fas fa-phone"></i>+47 959 98 283</a>
+                   <a class="mailto" href="mailto:hege.obstfelder@diplom-is.no "><i class="fas fa-envelope"></i></i>hege.obstfelder@diplom-is.no</a>
+                 </div>
+               </div>              
+           </section>
 
                      
                      
