newsletter link updates

--- a/en/ignite-academy/index.html
+++ b/en/ignite-academy/index.html
@@ -183,7 +183,7 @@
         
 <!-- NEWSLETTER---> 
 <section class="newsletter wrap">
-    <img class="newsletter-img" src="../images/newsletter.svg" alt="newsletter illustration sign up" width="255px">
+    <img class="newsletter-img" src="../../images/newsletter.svg" alt="newsletter illustration sign up" width="255px">
     <div class="newsletter-content">
         <h2>Sign up for our Newsletter</h2>
        <h4>Recieve the latest news about our products, services and events</h4>
@@ -211,8 +211,8 @@ data-reactid=".hbspt-forms-4">
     <iframe name="target_iframe_b46283cb-637c-46a5-8b9c-4cb06bc46bd3" style="display:none;" data-reactid=".hbspt-forms-4.8"></iframe>
 </form>
 <div class="social-media-icons">
-    <a href="https://www.facebook.com/igniteprocurement/" target="_blank"><img class="icon" src="../images/icons/facebook.svg" alt="Follow us on facebook" width="40px"></a>
-    <a href="https://www.linkedin.com/company/ignite-procurement/" target="_blank"><img class="icon" src="../images/icons/linkedin.svg" alt="Follow us on linkedin" width="40px"></a>
+    <a href="https://www.facebook.com/igniteprocurement/" target="_blank"><img class="icon" src="../../images/icons/facebook.svg" alt="Follow us on facebook" width="40px"></a>
+    <a href="https://www.linkedin.com/company/ignite-procurement/" target="_blank"><img class="icon" src="../../images/icons/linkedin.svg" alt="Follow us on linkedin" width="40px"></a>
   </div> 
 </section>
   
