--- a/en/contact/index.html
+++ b/en/contact/index.html
@@ -381,7 +381,7 @@
                 <div class="arrow-heading wrap">
                     <img class="arrow" src="../../images/arrow-right.svg" alt="Vi har bidratt med" width="50px">
                     <svg height="50" width="15%">
-                      <line x1="10" y1="24" x2="150" y2="24" style="stroke:#3c6fe9;stroke-width:2" />
+                      <line x1="10" y1="24" x2="150" y2="24" style="stroke:#153559;stroke-width:2" />
                     </svg>
                     <h4 class="arrow">Contact</h4>
     
