added teambilde about/om oss

--- a/en/about/index.html
+++ b/en/about/index.html
@@ -110,7 +110,7 @@
                     <h4>Founded in 2016 by former management consultants in the Boston Consulting Group (BCG), Ignite Procurement is a SaaS company with a clear mission – to enable procurement professionals to realize significant bottom line effects through digital tools, training and</h4>
                 </div>
                 <div class="header-content-img p-2 flex-fill bd-highlight">
-                  <img src="../../images/epicenter stocholm.jpg" alt="cumputer illustration" width="100%">
+                  <img src="../../images/team.jpg" alt="Team image" width="90%">
                 </div>
        
               </div>
