--- a/om-oss/index.html
+++ b/om-oss/index.html
@@ -109,7 +109,7 @@
                     <h4>Ignite Procurement ble startet opp i 2016, og springer ut fra grunnleggernes felles erfaring fra the Boston Consulting Group (BCG). Vi er et SaaS-selskap med et klart formål – å legge til rette for profesjonelle innkjøpere å realisere betydelige bunnlinjeeffekter gjennom digitale verktøy, trening og dedikert støtte.</h4>
                 </div>
                 <div class="header-content-img p-2 flex-fill bd-highlight">
-                  <img src="../images/epicenter stocholm.jpg" alt="cumputer illustration" width="100%">
+                  <img src="../images/team.jpg" alt="Teambilde" width="90%">
                 </div>
        
               </div>
