--- a/en/career/index.html
+++ b/en/career/index.html
@@ -141,7 +141,7 @@
       
  <!-- NEWSLETTER---> 
  <section class="newsletter wrap">
-    <img class="newsletter-img" src="../images/newsletter.svg" alt="newsletter illustration sign up" width="255px">
+    <img class="newsletter-img" src="../../images/newsletter.svg" alt="newsletter illustration sign up" width="255px">
     <div class="newsletter-content">
         <h2>Sign up for our Newsletter</h2>
        <h4>Recieve the latest news about our products, services and events</h4>
@@ -169,8 +169,8 @@ data-reactid=".hbspt-forms-4">
     <iframe name="target_iframe_b46283cb-637c-46a5-8b9c-4cb06bc46bd3" style="display:none;" data-reactid=".hbspt-forms-4.8"></iframe>
 </form>
 <div class="social-media-icons">
-    <a href="https://www.facebook.com/igniteprocurement/" target="_blank"><img class="icon" src="../images/icons/facebook.svg" alt="Follow us on facebook" width="40px"></a>
-    <a href="https://www.linkedin.com/company/ignite-procurement/" target="_blank"><img class="icon" src="../images/icons/linkedin.svg" alt="Follow us on linkedin" width="40px"></a>
+    <a href="https://www.facebook.com/igniteprocurement/" target="_blank"><img class="icon" src="../../images/icons/facebook.svg" alt="Follow us on facebook" width="40px"></a>
+    <a href="https://www.linkedin.com/company/ignite-procurement/" target="_blank"><img class="icon" src="../../images/icons/linkedin.svg" alt="Follow us on linkedin" width="40px"></a>
   </div> 
 </section>
 
@@ -206,7 +206,7 @@ data-reactid=".hbspt-forms-4">
                       <div class="footer-list">
                           <h4>About us</h4>
                           <ul class="sm-footer-list">
-                              <a href="../om_oss/#team"><li class="footer-li">Team</li></a>
+                              <a href="../about/#team"><li class="footer-li">Team</li></a>
                               <a href=""><li class="footer-li">Career</li></a>
                            </ul>
                       </div>
