--- a/en/contact/index.html
+++ b/en/contact/index.html
@@ -493,8 +493,7 @@ data-reactid=".hbspt-forms-4">
                         <ul class="la-footer-list">
                           <a href=""><li class="footer-li">CONTACT</li></a>
                           <a href="https://meetings.hubspot.com/borge-langedal" target="blank"><li class="footer-li">BOOK DEMO</li></a>
-                          <a href=""><li class="footer-li">MELD PÅ SEMINAR</li></a>
-                          <a href=""><li class="footer-li">LEI EN KONSULENT</li></a>
+         
                        </ul>
                    
                   </div>  
@@ -517,8 +516,8 @@ data-reactid=".hbspt-forms-4">
                       <div class="footer-list">
                           <h4>About us</h4>
                           <ul class="sm-footer-list">
-                              <a href="../om_oss/#team"><li class="footer-li">Team</li></a>
-                              <a href="../karriere/"><li class="footer-li">Career</li></a>
+                              <a href="../about/#team"><li class="footer-li">Team</li></a>
+                              <a href="../career/"><li class="footer-li">Career</li></a>
                            </ul>
                       </div>
                       <div class=footer-social>
