--- a/en/ignite-academy/index.html
+++ b/en/ignite-academy/index.html
@@ -249,8 +249,8 @@ data-reactid=".hbspt-forms-4">
                         <div class="footer-list">
                             <h4>About us</h4>
                             <ul class="sm-footer-list">
-                                <a href="../om_oss/#team"><li class="footer-li">Team</li></a>
-                                <a href="../karriere/"><li class="footer-li">Career</li></a>
+                                <a href="../about/#team"><li class="footer-li">Team</li></a>
+                                <a href="../career/"><li class="footer-li">Career</li></a>
                              </ul>
                         </div>
                         <div class=footer-social>
