--- a/om-oss/index.html
+++ b/om-oss/index.html
@@ -358,8 +358,8 @@
                         <ul class="la-footer-list">
                           <a href="../contact/"><li class="footer-li">KONTAKT OSS</li></a>
                           <a href="https://meetings.hubspot.com/borge-langedal" target="blank"><li class="footer-li">BOOK DEMO</li></a>
-                          <a href=""><li class="footer-li">MELD PÅ SEMINAR</li></a>
-                          <a href=""><li class="footer-li">LEI EN KONSULENT</li></a>
+                          <!-- <a href=""><li class="footer-li">MELD PÅ SEMINAR</li></a>---> 
+                         
                        </ul>
                    
                   </div>  
