--- a/index.html
+++ b/index.html
@@ -360,8 +360,6 @@
                     <ul class="la-footer-list">
                       <a href="contact/"><li class="footer-li">KONTAKT OSS</li></a>
                       <a href="https://meetings.hubspot.com/borge-langedal" target="blank"><li class="footer-li">BOOK DEMO</li></a>
-                      <a href=""><li class="footer-li">MELD PÅ SEMINAR</li></a>
-                      <a href=""><li class="footer-li">LEI EN KONSULENT</li></a>
                    </ul>
                
               </div>  
@@ -384,7 +382,7 @@
                   <div class="footer-list">
                       <h4>Om oss</h4>
                       <ul class="sm-footer-list">
-                          <a href="om_oss/#team"><li class="footer-li">Team</li></a>
+                          <a href="om-oss/#team"><li class="footer-li">Team</li></a>
                           <a href="karriere/"><li class="footer-li">Karriere</li></a>
                        </ul>
                   </div>
