--- a/en/index.html
+++ b/en/index.html
@@ -386,7 +386,7 @@ data-reactid=".hbspt-forms-4">
               </section>
               <aside class="personvern">
                   <div>
-                    <p><a class="inline" href="../privacy-policy/">Privacy policy</a></p>
+                    <p><a class="inline" href="privacy-policy/">Privacy policy</a></p>
                   </div>
                 </aside>
  
