--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
             </section>
             <aside class="personvern">
                 <div>
-                  <p>Informasjon om <a class="inline" href="../personvernerklæring/">cookies og personvernerklæring</a></p>
+                  <p>Informasjon om <a class="inline" href="personvernerklæring/">cookies og personvernerklæring</a></p>
                 </div>
               </aside>
 
