--- a/contact/index.html
+++ b/contact/index.html
@@ -80,7 +80,7 @@
                     </li>
                
                   <li class="">
-                      <a class="nav-reg" href="../om_oss/">Om selskapet</a>
+                      <a class="nav-reg" href="../om-oss/">Om selskapet</a>
                    </li>
                   <li class="">
                     <a class="nav-reg" href=" https://medium.com/ignite-procurement" target="blank">Innsikt</a>
