--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                       <li><span class="fa-li"><i class="fas fa-sync"></i></span>Sømløs og kompromissløs ​oppfølging av innkjøpet</li>
                     </ul>
                     <div class="services-btns d-flex p-2 bd-highlight flex-column  flex-lg-column">
-                      <a href="ignite-analytics.html"><button type="button" class="service btn btn-primary btn-lg">Finn ut mer</button></a>
+                      <a href="ignite-analytics/"><button type="button" class="service btn btn-primary btn-lg">Finn ut mer</button></a>
                       <a href="https://meetings.hubspot.com/borge-langedal" target="blank"><button type="button" class="service btn btn-outline-primary">Book Demo</button></a>
                   </div>
                 </div>
@@ -192,7 +192,7 @@
                      
                     </ul>
                     <div class="services-btns d-flex p-2 bd-highlight flex-column flex-lg-column">
-                      <a href=""><button type="button" class="service btn btn-primary green btn-lg">Meld din interesse</button></a>
+                      <a href="mailto:post@ignite.no"><button type="button" class="service btn btn-primary green btn-lg">Meld din interesse</button></a>
                       <a href="ignite-academy/"><button type="button" class="service btn btn-outline-primary green btn-lg">Finn ut mer</button></a>
                       
                     </div>
