--- a/ignite-analytics/index.html
+++ b/ignite-analytics/index.html
@@ -207,7 +207,7 @@
                 <svg height="50" width="15%">
                   <line x1="10" y1="24" x2="150" y2="24" style="stroke:#153559;stroke-width:2" />
                 </svg>
-                <h4 class="arrow">Noen av våre kunder på Ignite Analytics</h4>
+                <h4 class="arrow">Noen av våre kunder</h4>
 
               </div>
 
