--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
           <h4 class="arrow">NYHETSBREV</h4>
           </section>          
       
-        <!-- NEWSLETTER---> 
+        <!-- NEWSLETTER
         <section class="newsletter wrap">
             <img class="newsletter-img" src="../images/newsletter.svg" alt="newsletter illustration sign up" width="255px">
             <div class="newsletter-content">
@@ -299,7 +299,7 @@
         method="POST" class="newsletter hs-form stacked hs-form-private hs-form-b46283cb-637c-46a5-8b9c-4cb06bc46bd3_ab294c00-5f63-4e0c-a3a0-9c26a5604c85" data-form-id="b46283cb-637c-46a5-8b9c-4cb06bc46bd3" data-portal-id="4304957" target="target_iframe_b46283cb-637c-46a5-8b9c-4cb06bc46bd3"
         data-reactid=".hbspt-forms-4">
             <div class="form-group hs_email hs-email hs-fieldtype-text field hs-form-field" data-reactid=".hbspt-forms-4.1:$0">
-                <label id="label-email-b46283cb-637c-46a5-8b9c-4cb06bc46bd3" class="" placeholder="" for="email-b46283cb-637c-46a5-8b9c-4cb06bc46bd3" data-reactid=".hbspt-forms-4.1:$0.0"><span data-reactid=".hbspt-forms-4.1:$0.0.0"></span><span class="hs-form-required" data-reactid=".hbspt-forms-4.1:$0.0.1">*</span>
+                <label id="label-email-b46283cb-637c-46a5-8b9c-4cb06bc46bd3" class="" placeholder="E-mail" for="email-b46283cb-637c-46a5-8b9c-4cb06bc46bd3" data-reactid=".hbspt-forms-4.1:$0.0"><span data-reactid=".hbspt-forms-4.1:$0.0.0"></span><span class="hs-form-required" data-reactid=".hbspt-forms-4.1:$0.0.1">*</span>
                 </label>
                 <legend class="hs-field-desc" style="display:none;" data-reactid=".hbspt-forms-4.1:$0.1"></legend>
                 <div class="input" data-reactid=".hbspt-forms-4.1:$0.$email">
@@ -321,8 +321,46 @@
             <a href="https://www.facebook.com/igniteprocurement/" target="_blank"><img class="icon" src="../images/icons/facebook.svg" alt="Follow us on facebook" width="40px"></a>
             <a href="https://www.linkedin.com/company/ignite-procurement/" target="_blank"><img class="icon" src="../images/icons/linkedin.svg" alt="Follow us on linkedin" width="40px"></a>
           </div> 
-      </section>
+      </section>---> 
+      
 
+
+      <section class="newsletter wrap">
+          <img class="newsletter-img" src="../images/newsletter.svg" alt="newsletter illustration sign up" width="255px">
+          <div class="newsletter-content">
+              <h2>Motta Nyhetsbrev</h2>
+             <h4>Få siste nytt om våre produkter, tjenester og eventer</h4>
+          </div>  
+
+      <form novalidate="" accept-charset="UTF-8" action="https://forms.hsforms.com/submissions/v3/public/submit/formsnext/multipart/4304957/506acf1b-d291-445a-892e-986cbe5d21a4" enctype="multipart/form-data" id="hsForm_506acf1b-d291-445a-892e-986cbe5d21a4"
+method="POST" class="hs-form stacked hs-form-private hs-form-506acf1b-d291-445a-892e-986cbe5d21a4_4d5dc3b7-4c1d-4ccc-8c7d-551a2616d2a7" data-form-id="506acf1b-d291-445a-892e-986cbe5d21a4" data-portal-id="4304957" target="target_iframe_506acf1b-d291-445a-892e-986cbe5d21a4"
+data-reactid=".hbspt-forms-3">
+    <div class="form-group hs_email hs-email hs-fieldtype-text field hs-form-field" data-reactid=".hbspt-forms-3.1:$0">
+        <label id="label-email-506acf1b-d291-445a-892e-986cbe5d21a4" class="" placeholder="Enter your Email" for="email-506acf1b-d291-445a-892e-986cbe5d21a4" data-reactid=".hbspt-forms-3.1:$0.0"><span data-reactid=".hbspt-forms-3.1:$0.0.0">Email</span><span class="hs-form-required" data-reactid=".hbspt-forms-3.1:$0.0.1">*</span>
+        </label>
+        <legend class="hs-field-desc" style="display:none;" data-reactid=".hbspt-forms-3.1:$0.1"></legend>
+        <div class="input" data-reactid=".hbspt-forms-3.1:$0.$email">
+            <input id="email-506acf1b-d291-445a-892e-986cbe5d21a4" class="hs-input form-control" type="email" name="email" required="" placeholder="Enter email" value="" autocomplete="email" data-reactid=".hbspt-forms-3.1:$0.$email.0">
+        </div>
+    </div>
+    <noscript data-reactid=".hbspt-forms-3.2"></noscript>
+    <div class="hs_submit hs-submit" data-reactid=".hbspt-forms-3.5">
+        <div class="hs-field-desc" style="display:none;" data-reactid=".hbspt-forms-3.5.0"></div>
+        <div class="actions" data-reactid=".hbspt-forms-3.5.1">
+            <input type="submit" value="Sign me up" class="hs-button primary large btn btn-primary" data-reactid=".hbspt-forms-3.5.1.0">
+        </div>
+    </div>
+    <noscript data-reactid=".hbspt-forms-3.6"></noscript>
+    <input name="hs_context" type="hidden" value="{&quot;rumScriptExecuteTime&quot;:1577.6800000021467,&quot;rumServiceResponseTime&quot;:99548.15500001132,&quot;rumFormRenderTime&quot;:1.1249999952269718,&quot;rumTotalRenderTime&quot;:99549.45500000031,&quot;rumTotalRequestTime&quot;:151.83499999693595,&quot;lang&quot;:&quot;en&quot;,&quot;pageUrl&quot;:&quot;https://www.zenpilot.com/blog/how-to-integrate-hubspot-forms-with-leadpages&quot;,&quot;pageTitle&quot;:&quot;How to Integrate HubSpot Forms with LeadPages&quot;,&quot;source&quot;:&quot;FormsNext-static-3.193&quot;,&quot;timestamp&quot;:1550828062657,&quot;userAgent&quot;:&quot;Mozilla/5.0 (Macintosh; Intel Mac OS X 10_14_3) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/72.0.3626.109 Safari/537.36&quot;,&quot;originalEmbedContext&quot;:{&quot;portalId&quot;:&quot;4304957&quot;,&quot;formId&quot;:&quot;506acf1b-d291-445a-892e-986cbe5d21a4&quot;,&quot;target&quot;:&quot;#hbspt-form-1550828062567-4276736054&quot;,&quot;hutk&quot;:&quot;2c66f16397bfecce620d7d67bd92aa72&quot;,&quot;canonicalUrl&quot;:&quot;https://www.zenpilot.com/blog/how-to-integrate-hubspot-forms-with-leadpages&quot;,&quot;contentType&quot;:&quot;blog-post&quot;,&quot;pageId&quot;:&quot;1636638185&quot;},&quot;pageId&quot;:&quot;1636638185&quot;,&quot;formTarget&quot;:&quot;#hbspt-form-1550828062567-4276736054&quot;,&quot;correlationId&quot;:&quot;94f6c937-206a-4fcc-b771-2b42a1a5c8fa&quot;,&quot;contentType&quot;:&quot;blog-post&quot;,&quot;hutk&quot;:&quot;2c66f16397bfecce620d7d67bd92aa72&quot;}"
+    data-reactid=".hbspt-forms-3.7">
+    <iframe name="target_iframe_506acf1b-d291-445a-892e-986cbe5d21a4" style="display:none;" data-reactid=".hbspt-forms-3.8"></iframe>
+</form>
+
+<div class="social-media-icons">
+    <a href="https://www.facebook.com/igniteprocurement/" target="_blank"><img class="icon" src="../images/icons/facebook.svg" alt="Follow us on facebook" width="40px"></a>
+    <a href="https://www.linkedin.com/company/ignite-procurement/" target="_blank"><img class="icon" src="../images/icons/linkedin.svg" alt="Follow us on linkedin" width="40px"></a>
+  </div> 
+</section>
 
 
 
