--- a/ignite-services/index.html
+++ b/ignite-services/index.html
@@ -173,7 +173,7 @@
                       </div>
                       <div class="p-2 flex-fill bd-highlight">
                         <h3 style="color: #ebaf41;">Realisering av besparelser​</h3>
-                        <h4>Basert på vårt rammeverk med 8 spaker for reduserte innkjøpskostnader, har vi støttet kunder på tvers av en rekke industrier å realisere betydelige besparelser​.</h4>
+                        <h4>Basert på vårt rammeverk med 8 spaker for reduserte innkjøpskostnader, har vi støttet kunder på tvers av en rekke industrier å realisere betydelige besparelser​</h4>
                       </div>
                   </section>
 
