--- a/om-oss/index.html
+++ b/om-oss/index.html
@@ -107,7 +107,7 @@
         <div class=" wrap header d-flex bd-highlight flex-column flex-lg-row align-items-center justify-content-between">
                 <div class="header-content p-2 flex-fill bd-highlight">
                     <h1>Om oss</h1>
-                    <h4>Ignite Procurement ble startet opp i 2016, og springer ut fra grunnleggernes felles erfaring fra the Boston Consulting Group (BCG). Vi er et SaaS-selskap med et klart formål – å legge til rette for profesjonelle innkjøpere å realisere betydelige bunnlinjeeffekter gjennom digitale verktøy, trening og dedikert støtte.</h4>
+                    <h4>Ignite Procurement ble startet opp i 2016, og springer ut fra grunnleggernes felles erfaring fra the Boston Consulting Group (BCG). Vi er et SaaS-selskap med et klart formål – å legge til rette for profesjonelle innkjøpere å realisere betydelige bunnlinjeeffekter gjennom digitale verktøy, trening og dedikert støtte</h4>
                 </div>
                 <div class="header-content-img p-2 flex-fill bd-highlight">
                   <img src="../images/team.jpg" alt="Teambilde" width="90%">
